# fileforge

./: .env  .env.base
back/: .dockerignore  .gitignore  Dockerfile  entrypoint  pyproject.toml
back/api/routes/: __init__.py
back/api/routes/account/: __init__.py  login.py  me.py
back/api/routes/account/authenticate_providers/: __init__.py  google.py  linkedin.py
back/api/routes/manager/: __init__.py
back/api/schemas/: __init__.py  reponse.py  user.py
back/api/schemas/generic_model/: __init__.py  location_schema.py
back/api/utils/: __init__.py  decorators.py  request.py  response.py  router.py  schemas.py
back/apps/account/: apps.py  sessions.py
back/apps/account/admin/: __init__.py  user.py
back/apps/account/migrations/: 0001_initial.py
back/apps/account/models/: user.py
back/apps/dev/: apps.py  urls.py  views.py
back/apps/dev/statics/dev/: GraphModels.js  (+1 more)
back/apps/manager/: apps.py
back/apps/manager/admin/: file.py
back/apps/manager/migrations/: 0001_initial.py
back/apps/manager/models/: file.py
back/conf/: admin.py  authentication.py  scheduler.py  settings.py  urls.py  worker.py
back/core/: apps.py
back/core/management/commands/: fixtures.py  gitlab.py  task2.py  wait_for_db.py
back/core/migrations/: 0001_initial.py  0002_initial.py
back/core/models/: __init__.py  task.py
back/utils/: __init__.py  collections.py  email.py  html_get_text.py  pagination.py  query_node.py  string.py
back/utils/db/: __init__.py  convert_human_function.py  fields.py  model_location.py  models.py  queryset.py
back/utils/db/django_admin/: __init__.py  empty_field_filter.py  generate_image_html.py  location_admin.py  model_admin.py
back/utils/elasticsearch/: __init__.py  search_manager.py
(+194 files in other folders)
